# GPM

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PHASE_SUMMARY.md  PKGBUILD  QUICKSTART.md  README.md  config.example.toml  install.sh
.github/workflows/: main.yml  release.yml
gpm-core/: Cargo.toml
gpm-core/src/: api.rs  config.rs  error.rs  lib.rs  main.rs  ollama.rs  proxy.rs  service.rs
gpm-core/src/gpu/: mod.rs  nvml.rs
gpm-core/src/storage/: mod.rs  parquet.rs
gpm-core/src/telemetry/: metrics.rs  mod.rs  prometheus.rs
gpm-dashboard/: package-lock.json  package.json  server.py  vite.config.ts
gpm-dashboard/src/: App.css  App.tsx
gpm-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
gpm-dashboard/src-tauri/src/: lib.rs
gpumon-core/: Cargo.toml
gpumon-core/src/: api.rs  classifier.rs  config.rs  error.rs  lib.rs  main.rs  ollama.rs  service.rs
gpumon-core/src/gpu/: mod.rs  nvml.rs
gpumon-core/src/storage/: db.rs  mod.rs  parquet.rs  schema.sql
gpumon-core/src/telemetry/: distributed_tracing.rs  metrics.rs  mod.rs  prometheus.rs
gpumon-dashboard/: Cargo.toml  package-lock.json  package.json  vite.config.ts
gpumon-dashboard/src/: App.css  App.tsx  lib.rs
gpumon-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
gpumon-dashboard/src-tauri/src/: lib.rs
packaging/systemd/: gpm-server.service  gpm.service
scripts/: start-all.sh  start-backend.sh  start-frontend.sh  start-web.sh  stop-all.sh
