[workspace]
resolver = "2"
members = [
    "gpm-core",
    "gpm-dashboard/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GPM Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/gpm"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NVML
nvml-wrapper = "0.10"

# System monitoring
sysinfo = "0.33"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
polars = { version = "0.44", features = ["lazy", "parquet", "sql"] }

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["tonic", "metrics", "logs", "trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics", "trace", "logs"] }
opentelemetry-semantic-conventions = "0.27"

# Prometheus
prometheus = "0.13"

# HTTP
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.5", features = ["full"] }
http-body-util = "0.1"
bytes = "1.9"
futures-util = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

# Async utilities
once_cell = "1.20"
