[package]
name = "gpumon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
nvml-wrapper.workspace = true
sysinfo.workspace = true
sqlx.workspace = true
polars.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
prometheus.workspace = true
axum.workspace = true
reqwest.workspace = true
chrono.workspace = true
config.workspace = true
once_cell.workspace = true

# Additional dependencies
regex = "1.11"
glob = "0.3"
dirs = "5.0"
hostname = "0.4"
uuid = "1.11"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.14"
tokio-test = "0.4"

[lib]
name = "gpumon_core"
path = "src/lib.rs"

[[bin]]
name = "gpumon"
path = "src/main.rs"

[[bin]]
name = "web-server"
path = "src/bin/web-server.rs"
