[package]
name = "gpm-dashboard"
version = "0.1.0"
description = "GPU & LLM Monitoring Dashboard"
authors = ["GPM Team"]
edition = "2021"

[lib]
name = "gpm_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dependencies.gpm-core]
path = "../../gpm-core"

